<?xml version="1.0" encoding="utf-8"?>
<!--
**** NewHighScoreFragment Layout File
**** @author rahulthakur
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@android:color/white"
	android:clickable="true"
	android:gravity="center"
	android:orientation="vertical"
	android:soundEffectsEnabled="false" >

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/small_gap"
		android:contentDescription="@string/congrats"
		android:src="@drawable/congratulations" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/small_gap"
		android:gravity="center"
		android:maxLines="1"
		android:text="@string/new_score_msg"
		android:textColor="@color/purple_haze"
		android:textSize="@dimen/medium_text" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:orientation="horizontal" >

		<EditText
			android:id="@+id/playerNameEditText"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/small_gap"
			android:layout_weight="1"
			android:hint="@string/hint"
			android:inputType="textPersonName"
			android:maxLength="15" />

		<Button
			android:id="@+id/saveScoreButton"
			style="@style/buttonStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/small_gap"
			android:background="@drawable/red_button"
			android:text="@string/save" />
	</LinearLayout>

</LinearLayout>